-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.8, 6.9
-
None
-
-
fd73b2208 (dev), 68fb365e8 (6.9), 524349bb3 (tqtc/lts-6.8)
QTranslator load method fails, despite opening the same file with QFile and printing its content works.
On Desktop Linux it works.
| For Gerrit Dashboard: QTBUG-134627 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 633152,9 | Fix VxWorks POSIX access() behavior | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 639593,2 | Fix VxWorks POSIX access() behavior | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 640542,1 | Fix VxWorks POSIX access() behavior | 6.8 | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 670386,6 | Fix VxWorks POSIX access() behavior | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |