Fix VxWorks POSIX access() behavior

On VxWorks POSIX access() returns always false if it is called on file
which is not on POSIX file system, like DOSFS for example. Qt for
VxWorks 5.15 had similar patch omitting all access() calls and returning
true. This fix takes it a step further and checks if the file is on
POSIX filesystem or if it is DOSFS with read-only setting or not,
in case omitting access() call and returning true. Failure became
visible using QTranslator::load() method on DOSFS mmc card.

Task-number: QTBUG-134627
Pick-to: 6.8
Change-Id: I9c257d3cba1a2b976f2775ad129aae0e09f68ffd
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit fd73b220897e5b6faf012f2812e7eb9eab6c3955)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>